--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,14 +13,14 @@
 
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/multiple_filters"
+        android:id="@+id/botao_filtro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        riotour:fab_addButtonColorNormal="@color/light_blue"
-        riotour:fab_addButtonColorPressed="@color/blue"
-        riotour:fab_addButtonPlusIconColor="@color/white"
+        riotour:fab_addButtonColorNormal="@color/app_primary"
+        riotour:fab_addButtonColorPressed="@color/app_blue"
+        riotour:fab_addButtonPlusIconColor="@color/app_white"
         riotour:fab_addButtonSize="mini"
         riotour:fab_expandDirection="up"
         riotour:fab_labelsPosition="right">
@@ -30,9 +30,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="filtrarLugares"
-            riotour:fab_colorNormal="@color/light_blue"
-            riotour:fab_colorPressed="@color/blue"
-            riotour:fab_icon="@drawable/hotel"
+            riotour:fab_colorNormal="@color/app_primary"
+            riotour:fab_colorPressed="@color/app_blue"
+            riotour:fab_icon="@drawable/ico_hotel"
             riotour:fab_size="mini"
             riotour:fab_title="Hotéis" />
 
@@ -41,9 +41,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="filtrarLugares"
-            riotour:fab_colorNormal="@color/light_blue"
-            riotour:fab_colorPressed="@color/blue"
-            riotour:fab_icon="@drawable/monumento"
+            riotour:fab_colorNormal="@color/app_primary"
+            riotour:fab_colorPressed="@color/app_blue"
+            riotour:fab_icon="@drawable/ico_monumento"
             riotour:fab_size="mini"
             riotour:fab_title="Monumentos" />
 
@@ -52,9 +52,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="filtrarLugares"
-            riotour:fab_colorNormal="@color/light_blue"
-            riotour:fab_colorPressed="@color/blue"
-            riotour:fab_icon="@drawable/museu"
+            riotour:fab_colorNormal="@color/app_primary"
+            riotour:fab_colorPressed="@color/app_blue"
+            riotour:fab_icon="@drawable/ico_museu"
             riotour:fab_size="mini"
             riotour:fab_title="Museus" />
 
@@ -63,9 +63,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="filtrarLugares"
-            riotour:fab_colorNormal="@color/light_blue"
-            riotour:fab_colorPressed="@color/blue"
-            riotour:fab_icon="@drawable/ponto_turistico"
+            riotour:fab_colorNormal="@color/app_primary"
+            riotour:fab_colorPressed="@color/app_blue"
+            riotour:fab_icon="@drawable/ico_ponto_turistico"
             riotour:fab_size="mini"
             riotour:fab_title="Pontos Turisticos" />
 
@@ -74,19 +74,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="filtrarLugares"
-            riotour:fab_colorNormal="@color/light_blue"
-            riotour:fab_colorPressed="@color/blue"
-            riotour:fab_icon="@drawable/praia"
+            riotour:fab_colorNormal="@color/app_primary"
+            riotour:fab_colorPressed="@color/app_blue"
+            riotour:fab_icon="@drawable/ico_praia"
             riotour:fab_size="mini"
             riotour:fab_title="Praias" />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
     <com.getbase.floatingactionbutton.FloatingActionButton
-        android:id="@+id/getCurrentLocation"
+        android:id="@+id/botao_localizacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/multiple_filters"
-        android:layout_toLeftOf="@id/multiple_filters"
+        android:layout_alignBottom="@id/botao_filtro"
+        android:layout_toLeftOf="@id/botao_filtro"
         riotour:fab_colorNormal="#64B5F6"
         riotour:fab_colorPressed="#2196F3"
         riotour:fab_icon="@android:drawable/ic_menu_mylocation"
@@ -95,46 +95,41 @@
     <RelativeLayout
         android:id="@+id/detalhe"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="90dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/bg_branco"
+        android:background="@drawable/bg_mini_detalhe"
         android:visibility="gone">
 
         <ImageView
-            android:id="@+id/icone_lugar"
+            android:id="@+id/mini_icone_lugar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/tipo_lugar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/icone_lugar"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/app_white"
+            android:layout_toRightOf="@id/mini_icone_lugar"
             android:textSize="12sp" />
 
         <TextView
             android:id="@+id/nome_lugar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/icone_lugar"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/mini_icone_lugar"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textColor="@color/app_white"
+            android:textSize="19sp"
             android:textStyle="bold" />
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/icone_lugar"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/info" />
 
     </RelativeLayout>
 
