--- a/app/src/main/res/layout/fragment_detalhe_museu.xml
+++ b/app/src/main/res/layout/fragment_detalhe_museu.xml
@@ -34,7 +34,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@android:drawable/stat_sys_phone_call"
-            android:tint="@color/blue" />
+            android:tint="@color/app_blue" />
 
         <TextView
             android:id="@+id/campo_telefone"
