--- a/app/src/main/res/layout/fragment_detalhe_hotel.xml
+++ b/app/src/main/res/layout/fragment_detalhe_hotel.xml
@@ -52,7 +52,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@android:drawable/ic_dialog_email"
-            android:tint="@color/blue" />
+            android:tint="@color/app_blue" />
 
         <TextView
             android:id="@+id/campo_email"
@@ -165,7 +165,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@android:drawable/stat_sys_phone_call"
-            android:tint="@color/blue" />
+            android:tint="@color/app_blue" />
 
         <TextView
             android:id="@+id/campo_telefone"
