--- a/app/src/main/res/layout/fragment_detalhe_monumento.xml
+++ b/app/src/main/res/layout/fragment_detalhe_monumento.xml
@@ -11,7 +11,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_gravity="center_horizontal"
-        tools:src="@drawable/monumento" />
+        tools:src="@drawable/ico_monumento" />
 
     <LinearLayout
         android:layout_width="match_parent"
