--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="light_blue">#64B5F6</color>
-    <color name="blue">#2196F3</color>
-    <color name="white">#FFFFFF</color>
-    <color name="black">#fd000000</color>
-    <color name="dark_gray">#212121</color>
-    <color name="light_gray">#ff6a6a6a</color>
+    <color name="app_primary">#64B5F6</color>
+    <color name="app_primary_transparent">#CC64B5F6</color>
+    <color name="app_secondary_transparent">#CCBFDFF8</color>
+    <color name="app_background">#FFFFFF</color>
+    <color name="app_alt_primary">#9B1118</color>
+    <color name="app_alt_secondary">#BD1B21</color>
+
+    <color name="app_white">#FFFFFF</color>
+    <color name="app_blue">#2196F3</color>
 </resources>
