--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -1,45 +1,63 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_white"
     tools:context="br.com.riotour.activity.detalhe.DetalheActivity">
 
-    <RelativeLayout
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/detail_banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
+
+    <ScrollView
+        android:id="@+id/detalhes"
+        android:layout_above="@id/adView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/nome_lugar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:textSize="24sp"
-            tools:text="Nome" />
-
-        <ImageView
-            android:id="@+id/icone_lugar"
-            android:layout_width="27dp"
-            android:layout_height="27dp"
-            android:layout_alignTop="@id/nome_lugar"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@id/nome_lugar"
-            tools:src="@drawable/ico_monumento" />
-
-        <ImageView
-            android:id="@+id/mapa_lugar"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_below="@+id/nome_lugar"
-            android:layout_marginTop="12dp"
-            android:onClick="abrirCaminho"
-            tools:src="@drawable/ico_monumento" />
-
         <RelativeLayout
-            android:id="@+id/fragmentDetalhe"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/mapa_lugar" />
-    </RelativeLayout>
-</ScrollView>
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/nome_lugar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:textSize="24sp"
+                tools:text="Nome" />
+
+            <ImageView
+                android:id="@+id/icone_lugar"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_alignTop="@id/nome_lugar"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@id/nome_lugar"
+                tools:src="@drawable/ico_monumento" />
+
+            <ImageView
+                android:id="@+id/mapa_lugar"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_below="@+id/nome_lugar"
+                android:layout_marginTop="12dp"
+                android:onClick="abrirCaminho"
+                tools:src="@drawable/ico_monumento" />
+
+            <RelativeLayout
+                android:id="@+id/fragmentDetalhe"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_below="@+id/mapa_lugar"/>
+        </RelativeLayout>
+    </ScrollView>
+</RelativeLayout>
