--- a/app/src/release/res/values/app_keys.xml
+++ b/app/src/release/res/values/app_keys.xml
@@ -13,4 +13,6 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyCXdbYHVQsMxibxsSknG47K1wQf2paFmRc
     </string>
+    <string name="detail_banner_ad_unit_id">ca-app-pub-6396238557544035/1481303106</string>
+    <string name="google_analytics_key">UA-61739139-3</string>
 </resources>
